# python-course-2026

./: LICENSE  README.md  pyproject.toml
src /churn_predictor /: __main__.py  cli.py  data.py  model.py
