[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "churn_predictor"
version = "0.1.0"
description = "A CLI tool for customer churn analysis and prediction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "scikit-learn",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["src"]
 
